--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+DATABASE_USER=admin
+DATABASE_PASSWORD=100Days
+DATABASE_NAME=expert-journe
