--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "express_boilerplate",
+  "name": "expert-journey",
   "version": "1.0.0",
-  "description": "Express Api BoilerPlate",
-  "main": "src/app.ts",
+  "description": "Expert Journey",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/server.ts",
-    "dev": "nodemon src/server.ts",
-    "start:prod": "NODE_ENV=production nodemon src/server.ts",
-    "debug": "ndb src/server.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Mayorwa/Express-boilerplate.git"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Mayorwa",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mayorwa/Express-boilerplate.git/issues"
-  },
-  "homepage": "https://github.com/Mayorwa/Express-boilerplate.git#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -32,11 +26,11 @@
     "hpp": "^0.2.2",
     "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.2",
+    "mongoose": "^5.12.10",
     "morgan": "^1.9.1",
     "node-core-lib": "^0.11.11",
-    "nodemailer": "^6.1.1",
-    "nodemailer-mailgun-transport": "^2.0.0",
+    "nodemailer": "^6.6.0",
+    "nodemailer-mailgun-transport": "^2.1.3",
     "nodemon": "^2.0.4",
     "pug": "^2.0.3",
     "query-string": "^6.13.1",
@@ -44,8 +38,6 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^15.3.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
