--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend Test for expresso",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node index.js",
     "start-dev": "nodemon index.js"
   },
@@ -35,6 +35,8 @@
     "mongoose": "^5.12.10"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.7"
   }
 }
