--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Muhire-Josue/freelanncerz.git"
+    "url": ""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Muhire-Josue/freelanncerz/issues"
-  },
-  "homepage": "https://github.com/Muhire-Josue/freelanncerz#readme",
   "scripts": {
     "dev": "nodemon index.js --exec babel-node --presets @babel/preset-env",
     "start": "babel-node index.js",
@@ -35,21 +31,16 @@
     "babel-node": "0.0.1-security",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.18.3",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "cors": "^2.8.4",
-    "coveralls": "^3.0.11",
     "cross-env": "^7.0.2",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
-    "mailgen": "^2.0.10",
     "make-runnable": "^1.3.6",
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
-    "moment": "^2.24.0",
     "morgan": "^1.10.0",
     "node-cron": "^2.0.3",
     "redis": "^3.0.2",
@@ -67,8 +58,6 @@
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.2",
-    "mocha": "^7.1.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
     "request": "^2.88.2",
